# varanus

./: Cargo.toml
fast-version/: Cargo.toml  build.rs
fast-version/benches/: compare_bench.rs
fast-version/src/: lib.rs  serde.rs  simd.rs  version.rs  version_req.rs
protocols/varanus-pingpong/: Cargo.toml
protocols/varanus-pingpong/src/: lib.rs
varanus-core/: Cargo.toml  build.rs
varanus-core/src/: lib.rs
varanus-core/src/encryption/: mod.rs  plaintext.rs
varanus-core/src/node/: builder.rs  mod.rs
varanus-core/src/protocol/: identifier.rs  mod.rs  name.rs  request.rs
varanus-core/src/transport/: address.rs  connection.rs  mod.rs
