[package]
name = "varanus-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "io-util"] }
fast-version = { path = "../fast-version" }
thiserror = "1"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1"
pin-project = "1.0.10"

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = ["tokio"]
tokio = ["tokio/rt", "tokio/rt-multi-thread"]