[package]
name = "varanus-pingpong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_millis = "0.1.1"
varanus-core = {path = "../../varanus-core" }
lazy_static = "1.4.0"
fast-version = {path = "../../fast-version"}